Lanes and PlattformUserManagement scrollable Known Issue: Background color in lane component does not fit scrollable content

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -42,10 +42,6 @@
 .status {
   margin-right: 8px;
 }
-.lane{
-  margin-top: 20px;
-
-  }
 .epic {
     float: left;
   }
@@ -65,8 +61,13 @@
     margin-right: 6px;
     margin-left: -24px;
   }
+  .lane{
+    margin-top: 20px;
+    height: 75vh;
+    }
 .lane-body {
     /* height: 100vh; */
+    height: 75vh;
     background-color: #2E4057;
     padding-left: -2px;
     border-style: solid;
@@ -75,14 +76,14 @@
     border-left-color: #6441A4;
     border-right-color: #6441A4;
   }
-.lane-extended {
-    background-color: lightgray;
+/* .lane-extended {
+    background-color: #2E4057;
     border-style: solid;
     border-top-style: hidden;
     border-left-color: #6441A4;
     border-right-color: #6441A4;
     border-bottom-color: #6441A4;
-  }
+  } */
 .epic-header {
     background-color: #6441A4;
     width: 300px;
